--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
-    "express-fileupload": "^1.0.0-alpha.1",
+    "express-fileupload": "^1.2.0",
     "google-auth-library": "^2.0.0",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.2.17",
+    "mongoose": "^5.10.9",
     "mongoose-unique-validator": "^2.0.2",
     "underscore": "^1.9.1"
   }
